--- a/application/CohortManager/src/Functions/Shared/Common/Common.csproj
+++ b/application/CohortManager/src/Functions/Shared/Common/Common.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
         <PackageReference Include="Azure.Identity" Version="1.14.1" />
         <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.20.1" />
+        <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.8.0" />
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
         <PackageReference Include="Azure.Storage.Queues" Version="12.20.1" />
@@ -22,9 +23,12 @@
         <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
         <PackageReference Include="Microsoft.Extensions.Azure" Version="1.12.0" />
         <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.6" />
+        <PackageReference Include="Microsoft.Identity.Client" Version="4.74.0" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
         <PackageReference Include="RulesEngine" Version="5.0.3" />
         <PackageReference Include="Polly" Version="8.5.0" />
         <PackageReference Include="Hl7.Fhir.R4" Version="5.11.4" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
     </ItemGroup>
 
     <ItemGroup>
