feat: Verify the data from ServiceNow using PDS and save to database

--- a/application/CohortManager/src/Functions/ParticipantManagementServices/ManageServiceNowParticipant/ManageServiceNowParticipant.csproj
+++ b/application/CohortManager/src/Functions/ParticipantManagementServices/ManageServiceNowParticipant/ManageServiceNowParticipant.csproj
@@ -27,8 +27,9 @@
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
-    <ProjectReference Include="..\..\Shared\HealthChecks\HealthChecks.csproj" />
-    <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
+    <ProjectReference Include="../../Shared/DataServices.Client/DataServices.Client.csproj" />
+    <ProjectReference Include="../../Shared/Common/Common.csproj" />
+    <ProjectReference Include="../../Shared/HealthChecks/HealthChecks.csproj" />
+    <ProjectReference Include="../../Shared/Model/Model.csproj" />
   </ItemGroup>
 </Project>
