--- a/tests/UnitTests/ConsolidatedTests.csproj
+++ b/tests/UnitTests/ConsolidatedTests.csproj
@@ -146,7 +146,10 @@
       <!-- FileValidation Services -->
   <ItemGroup>
     <ProjectReference Include="..\..\application\CohortManager\src\Functions\ScreeningValidationService\FileValidation\FileValidation.csproj" />
+    <ProjectReference Include="JWTTokenServiceTests\JWTTokenServiceTests.csproj" />
   </ItemGroup>
+
+  
   <!-- Content files to be copied to output directory -->
   <ItemGroup>
     <None Update="**\*.json;**\*.parquet" CopyToOutputDirectory="PreserveNewest" />
