test: chore take auth secret from github secrets

--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -32,6 +32,8 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Start application
+        env:
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
         run: |
           npm run dev:secure &
           # Wait for the app to be ready
