feat: adding the abillity to use signed JWT tokens to the PDS service and get token from NHS token service for calling PDS (#1359)
* feat: adding the abillity to use signed JWT tokens to the PDS service and get a token from the NHS for demograpghic data

* chore: code clean up and allowing harmless key delimiters in code

* allowing harmless key delimiters in code

* fix: fixing units and code clean up

* fix: fixing units and code clean up

* fix: removing unwanted log statement

* chore: code clean up

* fix: code clean up

* chore: code clean up

* adding key vault connection string to tf vars dev

* chore: addressing comments on PR

* chore: addressing PR comments

* chore: addressing comments

* fixing secret scan

* chore: adressing sonar cube

* fix: making sure gitleaks is correct

* chore: trying to fix dot net issues

* chore: adressing sonar cube

* chore: adressing sonar cube

* chore: adressing sonar cube

* chore: adressing sonar cube

* chore: addressing comments in pr

--- a/tests/UnitTests/ConsolidatedTests.csproj
+++ b/tests/UnitTests/ConsolidatedTests.csproj
@@ -133,6 +133,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\application\CohortManager\src\Functions\ServiceNowIntegration\ServiceNowMessageHandler\ServiceNowMessageHandler.csproj" />
   </ItemGroup>
+      <!-- FileValidation Services -->
+  <ItemGroup>
+    <ProjectReference Include="..\..\application\CohortManager\src\Functions\ScreeningValidationService\FileValidation\FileValidation.csproj" />
+    <ProjectReference Include="JWTTokenServiceTests\JWTTokenServiceTests.csproj" />
+  </ItemGroup>
+
+  
   <!-- Content files to be copied to output directory -->
   <ItemGroup>
     <None Update="**\*.json;**\*.parquet" CopyToOutputDirectory="PreserveNewest" />
