test: chore ignore-https-errors

--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -46,7 +46,7 @@ jobs:
 
           # Run the tests
           npx bddgen
-          npx playwright test
+          npx playwright test --ignore-https-errors
 
       - name: Upload test results
         if: always()
