test: fix pass ignore options from playwright config

--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -46,7 +46,7 @@ jobs:
 
           # Run the tests
           npx bddgen
-          npx playwright test --ignore-https-errors
+          npx playwright test
 
       - name: Upload test results
         if: always()
