--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -2,7 +2,7 @@ name: UI Tests
 
 on:
   push:
-    #branches: [ main ]
+    branches: [main]
   pull_request:
     branches: [main]
   workflow_dispatch:
