feat: refactor validations (#1366)
* feat: refactor validations

* feat: refactor validations

* feat: refactor validations

* feat: refactor validations to return exceptions

* fix: tests

* feat: update exception handler

* Update ExceptionHandler.cs

* test: update tests

* chore: sonarqube comments

* fix: tests

* chore: responding to comments

--- a/application/CohortManager/compose.cohort-distribution.yaml
+++ b/application/CohortManager/compose.cohort-distribution.yaml
@@ -21,6 +21,7 @@ services:
       - LookupValidationURL=http://lookup-validation:7075/api/LookupValidation
       - StaticValidationURL=http://static-validation:7074/api/StaticValidation
       - ParticipantDemographicDataServiceURL=http://participant-demographic-data-service:7993/api/ParticipantDemographicDataService
+      - RemoveOldValidationRecordUrl=http://remove-validation-exception-data:7085/api/RemoveValidationExceptionData
       - IgnoreParticipantExceptions=false
       - IsExtractedToBSSelect=true
 
