--- a/application/CohortManager/src/Functions/Shared/Model/Model.csproj
+++ b/application/CohortManager/src/Functions/Shared/Model/Model.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="ParquetSharp" Version="17.0.0-beta1" />
+    <PackageReference Include="RulesEngine" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
