--- a/.azuredevops/pipelines/acr-image-retag.yaml
+++ b/.azuredevops/pipelines/acr-image-retag.yaml
@@ -26,6 +26,7 @@ parameters:
     type: string
     values:
       - integration
+      - preprod
     default: integration
 
   - name: destRegistry
