--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -100,6 +100,24 @@ services:
       - ParticipantManagementUrl=http://participant-management-data-service:7994/api/ParticipantManagementDataService
       - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
 
+  manage-servicenow-participant:
+    container_name: manage-servicenow-participant
+    image: cohort-manager-manage-servicenow-participant
+    networks: [cohman-network]
+    build:
+      context: ./src/Functions/
+      dockerfile: ParticipantManagementServices/ManageServiceNowParticipant/Dockerfile
+    profiles: [non-essential]
+    environment:
+      - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
+      - ServiceNowParticipantManagementTopic=servicenow-participant-management-topic
+      - ManageServiceNowParticipantSubscription=manage-servicenow-participant-sub
+      - ServiceBusConnectionString_internal=Endpoint=sb://service-bus;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
+      - ServiceBusConnectionString_client_internal=Endpoint=sb://service-bus;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
+      - RetrievePdsDemographicURL=http://retrieve-pds-demographic:8082/api/RetrievePDSDemographic
+      - SendServiceNowMessageURL=http://servicenow-message-handler:9092/api/servicenow/send
+      - ParticipantManagementURL=http://participant-management-data-service:7994/api/ParticipantManagementDataService
+
   update-blocked-flag:
     container_name: update-blocked-flag
     image: cohort-manager-update-blocked-flag
@@ -290,6 +308,7 @@ services:
       - ServiceNowClientId=${SERVICENOW_CLIENT_ID}
       - ServiceNowClientSecret=${SERVICENOW_CLIENT_SECRET}
       - ServiceNowRefreshToken=${SERVICENOW_REFRESH_TOKEN}
+      - ServiceBusConnectionString_client_internal=Endpoint=sb://service-bus;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
     ports:
       - "9092:9092"
 
