--- a/application/CohortManager/src/Web/.env.example
+++ b/application/CohortManager/src/Web/.env.example
@@ -2,7 +2,7 @@
 # NEXTAUTH_SECRET - Run npx auth secret to generate a value
 # AUTH_CIS2_CLIENT_ID -Speak to a developer in the team to get this
 # AUTH_CIS2_CLIENT_SECRET - Speak to a developer in the team to get this
-# COHORT_MANAGER_USERS - Comma separated list of CIS2 UIDs that are allowed to access the Cohort Manager
+# COHORT_MANAGER_RBAC_CODE - Comma separated list of the workgroup codes that the Cohort Manager RBAC should have access to
 
 # .env
 SERVICE_NAME="Cohort Manager"
@@ -16,11 +16,11 @@ AUTH_CIS2_ISSUER_URL=https://am.nhsint.auth-ptl.cis2.spineservices.nhs.uk:443
 AUTH_CIS2_CLIENT_ID=
 AUTH_CIS2_CLIENT_SECRET=
 
+# CIS2 RBAC
+COHORT_MANAGER_RBAC_CODE=000000000000
+
 # API
 EXCEPTIONS_API_URL=https://localhost:3000
-
-# Cohort Manager users UIDs
-COHORT_MANAGER_USERS=
 
 # Only required for hosted environments
 AUTH_TRUST_HOST=true
