--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -31,6 +31,11 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+         - name: Debug AUTH_SECRET
+        run: echo "AUTH_SECRET is set: ${AUTH_SECRET:+yes}"
+        env:
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+
       - name: Start application and run tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
