--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -1,6 +1,10 @@
 name: UI Tests
 
 on:
+  push:
+    paths:
+      - "application/CohortManager/src/Web/**"
+    branches: [main]
   pull_request:
     paths:
       - "application/CohortManager/src/Web/**"
@@ -30,12 +34,6 @@ jobs:
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
-
-      # <-- ADD THIS DEBUG STEP HERE
-      - name: Debug AUTH_SECRET
-        run: echo "AUTH_SECRET is set: ${AUTH_SECRET:+yes}"
-        env:
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
 
       - name: Start application and run tests
         env:
