--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -1,10 +1,6 @@
 name: UI Tests
 
 on:
-  push:
-    paths:
-      - "application/CohortManager/src/Web/**"
-    branches: [main]
   pull_request:
     paths:
       - "application/CohortManager/src/Web/**"
@@ -35,6 +31,12 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      # <-- ADD THIS DEBUG STEP HERE
+      - name: Debug AUTH_SECRET
+        run: echo "AUTH_SECRET is set: ${AUTH_SECRET:+yes}"
+        env:
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+
       - name: Start application and run tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
@@ -55,7 +57,7 @@ jobs:
           # Run the tests
           npm run test:e2e
 
-      - name: Start application and run epic 4a tests
+      - name: run epic 4a tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
@@ -63,14 +65,7 @@ jobs:
           EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
           COHORT_MANAGER_USERS: ${{ vars.COHORT_MANAGER_USERS }}
         run: |
-          # Start the app in background
-          npm run dev:secure &
 
-          # Wait for the app to be ready
-          while ! curl -s https://localhost:3000 > /dev/null; do
-            echo "Waiting for app to start..."
-            sleep 5
-          done
 
           # Run the tests
           npm run test:e2e:epic_4a
