--- a/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
@@ -84,14 +84,6 @@
             "Expression": "participant.EligibilityFlag != \"0\""
           },
           {
-            "Name": "delRecordType",
-            "Expression": "participant.RecordType == Actions.Removed"
-          },
-          {
-            "Name": "validDelEligibilityFlag",
-            "Expression": "participant.EligibilityFlag != \"1\""
-          },
-          {
             "Name": "amendRecordType",
             "Expression": "participant.RecordType == Actions.Amended"
           },
@@ -100,7 +92,7 @@
             "Expression": "(participant.EligibilityFlag == \"1\") OR (participant.EligibilityFlag == \"0\")"
           }
         ],
-        "Expression": "(newRecordType AND validNewEligibilityFlag) OR (delRecordType AND validDelEligibilityFlag) OR (amendRecordType AND validAmendEligibilityFlag)",
+        "Expression": "(newRecordType AND validNewEligibilityFlag) OR (amendRecordType AND validAmendEligibilityFlag)",
         "Actions": {
           "OnFailure": {
             "Name": "OutputExpression",
@@ -231,6 +223,23 @@
             "Name": "OutputExpression",
             "Context": {
               "Expression": "\"Invalid death status\""
+            }
+          }
+        }
+      }
+    ]
+  },
+  {
+    "WorkflowName": "DEL",
+    "Rules": [
+      {
+        "RuleName": "94.EligibilityFlag.CaaS.NonFatal",
+        "Expression": "participant.EligibilityFlag == \"0\"",
+        "Actions": {
+          "OnFailure": {
+            "Name": "OutputExpression",
+            "Context": {
+              "Expression": "\"Invalid eligibility flag.\""
             }
           }
         }
