feat: DTOSS-8352 fix build error

--- a/tests/UnitTests/NemsSubscriptionServiceTests/ProcessNemsUpdateTests/ProcessNemsUpdateTests.csproj
+++ b/tests/UnitTests/NemsSubscriptionServiceTests/ProcessNemsUpdateTests/ProcessNemsUpdateTests.csproj
@@ -24,6 +24,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\application\CohortManager\src\Functions\NemsSubscriptionService\ProcessNemsUpdate\ProcessNemsUpdate.csproj" />
+    <ProjectReference Include="..\..\..\..\application\CohortManager\src\Functions\Shared\Common\Common.csproj" />
+     <ProjectReference Include="..\..\..\..\application/CohortManager\src\Functions\Shared\Model\Model.csproj" />
   </ItemGroup>
 
 </Project>
