--- a/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
@@ -97,7 +97,7 @@
     "Rules": [
       {
         "RuleName": "30.Postcode.NBO.NonFatal",
-        "Expression": "string.IsNullOrEmpty(participant.Postcode) OR ValidationHelper.ValidatePostcode(participant.Postcode)",
+        "Expression": "string.IsNullOrEmpty(participant.Postcode) OR ValidationHelper.ValidatePostcode(participant.Postcode) OR participant.Postcode == \"ZZZSECUR\" OR participant.Postcode == \"ZZ99\"",
         "Actions": {
           "OnFailure": {
             "Name": "OutputExpression",
@@ -182,7 +182,7 @@
                 "Expression": "\"Address is missing\""
             }
           }
-        } 
+        }
       }
     ]
   },
