feat: block phase 2 pds (#1423)
* feat: Add PDS Stub

* block participant refactor

* Stubbing Nems API

* Update Logging and returning body

* get participant and bug fixes

* unblock participant

* tidying

* Eligbility flag logic

* Logging and remove rule

* intial tests

* tfvars and compose

* function signature overlap

* some sonar qube fixes

* more sonar qube fixes

* more sonar qube fixes

* more sonar qube

* tests part one

* Correct Logging from PR Comment

Co-authored-by: Sam Ainsworth <samuel.ainsworth1@nhs.net>

* Addressing comments

* Incorrect Logic comment

* Block Participant Tests

* Addressing Comments

* Sonar Qube

* Tests

* remove duplicate test

* Addressing Comments

* using const for cannot parse message

* unused usings

---------

Co-authored-by: Joseph2910 <184524642+Joseph2910@users.noreply.github.com>
Co-authored-by: Sam Ainsworth <samuel.ainsworth1@nhs.net>

--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -140,6 +140,9 @@ services:
       - ParticipantManagementUrl=http://participant-management-data-service:7994/api/ParticipantManagementDataService
       - ParticipantDemographicDataServiceURL=http://participant-demographic-data-service:7993/api/ParticipantDemographicDataService/
       - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
+      - ManageNemsSubscriptionUnsubscribeURL=http://manage-nems-subscription:9081/api/Unsubscribe
+      - ManageNemsSubscriptionSubscribeURL=http://manage-nems-subscription:9081/api/ManageNemsSubscriptionSubscribeURL
+      - RetrievePdsDemographicURL=http://etrieve-pds-demographic:8082/api/RetrievePdsDemographic
 
   delete-participant:
     container_name: delete-participant
