fix: moving pds processer tests to the right place

--- a/tests/UnitTests/PdsProcessorTests/PdsProcessorTests.csproj
+++ b/tests/UnitTests/PdsProcessorTests/PdsProcessorTests.csproj
@@ -23,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\application\CohortManager\src\Functions\DemographicServices\RetrievePDSDemographic\RetrievePDSDemographic.csproj" />
+    <ProjectReference Include="..\..\..\application\CohortManager\src\Functions\DemographicServices\RetrievePDSDemographic\RetrievePDSDemographic.csproj" />
   </ItemGroup>
+  
 
 </Project>
