--- a/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
@@ -12,7 +12,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: feat/dtoss-9902-end-to-end-pipeline
+      ref: 34a7e5c3072bddaa350804905c60b9c8e7ae7191
       endpoint: NHSDigital
 
 parameters:
@@ -61,14 +61,13 @@ variables:
 
 stages:
   - stage: re_tag_stage
+    # Only required until commit hashes are passed in by calling pipeline
     displayName: ACR re-tag
     condition: and(eq(variables['Build.Reason'], 'Manual'), in('${{ parameters.retagImages }}', 'true'))
     jobs:
     - job: re_tag
       displayName: Re-tag Docker images
       variables:
-        # SELECT_IMAGE_TAG: ${{ parameters.dockerImageTag }}
-        # ADD_IMAGE_TAG: ${{ parameters.dockerImageTag }}
         SELECT_IMAGE_TAG: nft
         ADD_IMAGE_TAG: integration
       steps:
