--- a/.azuredevops/pipelines/cd-infrastructure-prod-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-prod-core.yaml
@@ -5,7 +5,6 @@ trigger: none
 pr: none
 
 pool:
-  #vmImage: ubuntu-latest
   name: private-pool-prod-uks
 
 resources:
@@ -13,7 +12,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: d6d6e3e99459d9d71a83fa5affa900a6c339a3b5
+      ref: 34a7e5c3072bddaa350804905c60b9c8e7ae7191
       endpoint: NHSDigital
 
 parameters:
@@ -22,9 +21,15 @@ parameters:
     type: string
     default: production
 
+  - name: retagImages
+    displayName: 'Re-tag Images'
+    type: boolean
+    default: true
+
 variables:
   - group: PROD_core_backend
   - group: PROD_audit_backend_remote_state
+  - group: PROD_image_pipelines
   - group: PRD_hub_backend_remote_state
   - name: TF_VERSION
     value: 1.11.4
@@ -36,8 +41,23 @@ variables:
     value: production
 
 stages:
-  - stage: terraform_plan
-    displayName: Terraform Plan
+  - stage: re_tag_stage
+    # Only required until commit hashes are passed in by calling pipeline
+    displayName: ACR re-tag
+    condition: eq(variables['Build.Reason'], 'Manual')
+    jobs:
+    - job: re_tag
+      displayName: Re-tag Docker images
+      variables:
+        SELECT_IMAGE_TAG: preprod
+        ADD_IMAGE_TAG: production
+      steps:
+        - template: .azuredevops/templates/steps/acr-import-retag-no-additional-tags.yaml@dtos-devops-templates
+          parameters:
+            serviceConnection: $(SERVICE_CONNECTION)
+
+  - stage: terraform_deploy
+    displayName: Terraform Deploy
     condition: eq(variables['Build.Reason'], 'Manual')
     variables:
       tfVarsFile: environments/$(ENVIRONMENT).tfvars
@@ -51,14 +71,11 @@ stages:
             parameters:
               tfCommandOptions: '-var="docker_image_tag=${{ parameters.dockerImageTag }}"'
 
-  - stage: terraform_apply
-    displayName: Terraform Apply
-    dependsOn: [terraform_plan]
-    condition: and(eq(dependencies.terraform_plan.outputs['init_and_plan.TerraformPlan.changesPresent'], 'true'), eq(variables['Build.Reason'], 'Manual'))
-    jobs:
       - deployment: terraform_apply
         displayName: Init, get plan artifact, apply
         environment: $(ENVIRONMENT)
+        dependsOn: init_and_plan
+        condition: eq(dependencies.init_and_plan.outputs['TerraformPlan.changesPresent'], 'true')
         strategy:
           runOnce:
             deploy:
@@ -66,3 +83,32 @@ stages:
                 - checkout: self
                 - checkout: dtos-devops-templates
                 - template: .azuredevops/templates/steps/tf_apply.yaml@dtos-devops-templates
+
+  - stage: db_changes_stage
+    displayName: Database changes
+    jobs:
+    - job: db_changes
+      pool:
+        name: private-pool-dev-uks
+      displayName: Apply database changes
+      steps:
+        - checkout: self
+        - checkout: dtos-devops-templates
+        - template: .azuredevops/templates/steps/app-container-job-start.yaml@dtos-devops-templates
+          parameters:
+            serviceConnection: $(SERVICE_CONNECTION)
+            targetSubscriptionId: $(TF_VAR_TARGET_SUBSCRIPTION_ID)
+            resourceGroupName: $(RESOURCE_GROUP_NAME_SQL)
+            jobName: $(DATABASE_MANAGEMENT_JOB_NAME)
+
+  - stage: restart_functions_stage
+    displayName: Restart Function Apps
+    jobs:
+    - job: restart_functions
+      pool:
+        name: private-pool-dev-uks
+      displayName: Restart Function Apps so they pick up new images
+      steps:
+        - template: .azuredevops/templates/steps/function-apps-restart.yaml@dtos-devops-templates
+          parameters:
+            serviceConnection: $(SERVICE_CONNECTION)
